// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account action creators Should correctly handle an arbitrary error being thrown 1`] = `
Array [
  Object {
    "params": Object {
      "errorMessage": "gamma rays have flipped our bits!",
      "stackTrace": undefined,
    },
    "routeName": "Exception",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Account action creators Should correctly handle an empty personas table 1`] = `
Array [
  Object {
    "type": "SET_LOADING",
    "value": false,
  },
]
`;

exports[`Account action creators Should correctly handle more existing user identites 1`] = `
Array [
  Object {
    "type": "DID_SET",
    "value": "did:jolo:first",
  },
  Object {
    "type": "SET_LOADING",
    "value": false,
  },
  Object {
    "actions": Array [
      Object {
        "routeName": "Home",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Account action creators Should correctly handle one existing user identity 1`] = `
Array [
  Object {
    "type": "DID_SET",
    "value": "did:jolo:mock",
  },
  Object {
    "type": "SET_LOADING",
    "value": false,
  },
  Object {
    "actions": Array [
      Object {
        "routeName": "Home",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;
